# JavaScriptCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-javascriptcore.yml
cmake/: FindJavaScriptCore.cmake
overlay-ports/javascriptcore/: disable_api_tests.patch  modify_install_rules.patch  remove_webkit_find_package.patch  tune_jsconly_port_for_windows.patch  tune_wtf.patch  usage
